feature/kafka: send domain events to kafka
Events are sent to kafka.

For now, we use JSON format.